# Changelog
# $Id$
mm-dd-yy - Version 5.1.39

  - Deprecate the EOF packet.

  - Fix for Bug#75956, Inserting timestamps using a server PreparedStatement and useLegacyDatetimeCode=false

  - Fix for Bug#22385172, CONNECTOR/J MANIFEST DOES NOT EXPOSE FABRIC (OSGi).

  - Fix for Bug#22598938, FABRICMYSQLDATASOURCE.GETCONNECTION() NPE AFTER SWITCHOVER.

11-30-15 - Version 5.1.38

  - Fix for Bug#21286268, CONNECTOR/J REPLICATION USE MASTER IF SLAVE IS UNAVAILABLE.

  - Fix for Bug#21296840 & Bug#17910835, Server information in a group from Fabric is not refreshed after expired TTL.

  - Fix for Bug#56122 (11763419), JDBC4 functionality failure when using replication connections.

  - Added support for TLSv1.1 and TLSv1.2

  - Fix for Bug#78961 (22096981), Can't call MySQL procedure with InOut parameters in Fabric environment.

  - Fix for Bug#56100 (11763401), Replication driver routes DML statements to read-only slaves.

  - StandardSSLSocketFactory implements SocketMetadata.

  - Fix for Bug#21978216, GETTYPEINFO REPORT MAXIMUM PRECISION OF 255 FOR VARBINARY.

  - Fix for Bug#78706 (21947042), Prefer TLS where supported by MySQL Server.

  - Fix for Bug#21934573, FABRIC CODE INVOLVED IN THREAD DEADLOCK.
    Duplicate: Bug#78710 (21966391), Deadlock on ReplicationConnection and ReplicationConnectionGroup when failover.

10-15-15 - Version 5.1.37

  - Fix for Bug#21876798, CONNECTOR/J WITH MYSQL FABRIC AND SPRING PRODUCES PROXY ERROR.

  - Fix for Bug#76859 (20969312), DBMD getColumns using I_S doesn't have column IS_GENERATEDCOLUMN as per JDBC 4.1.
    Added support for GENERATED COLUMNS.

  - Update Time Zone mappings with IANA Time Zone database tsdata2015f and Unicode CLDR v.28.

  - Update DatabaseMetaData SQL keywords.

  - Added tests for Optimizer hints syntax introduced in MySQL 5.7.7.

  - Fix for Bug#21860833, JSON DATA TYPE DOESN'T WORK WITH SSPS.
    Added support for JSON data type.

  - Added support for JDBC 4.2 new features.